# pixel_latency_eventcameras

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html
css/: featVariablity.css
js/: site.js
scripts/: convert_json_to_yaml.py  example-config.json  gen_figures_ROI.sh  gen_figures_all.sh  gen_figures_maps.sh  gen_figures_size_ROI.sh  irradiance.py  map_all_pixels.py  measure.sh  measure_evens.sh  measure_extrabias.sh  plot_latency.py  settings.json
scripts/configs/: HD3x3.sh  HD3x3_fo.sh  HD3x3_hpf.sh  HD_full.sh  VGA3x3.sh  VGA3x3_fo.sh  VGA3x3_hpf.sh  VGA_full.sh  test_HD.sh  test_VGA.sh
scripts/plot/: gen_figures_ROI.sh  gen_figures_all.sh  gen_figures_maps.sh  gen_figures_size_ROI.sh  gen_img_cmd.sh  map_all_pixels.py  map_fov.py  plot.py  plot_latency.py
src/: config.h  event_analyzer.h  latency.cpp  latency.h  macros.h  main.cpp  trigger_analyzer.h
web/: index_viewFigures.html
web/css/: bootstrap.css  layout.css  main_style.css
